@@ -1,3 +1,8 @@
+2003-10-21  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* bytecode.c (execute_optimized_program):
+	Revert Mike's patch temporarily.
+
 2003-10-11  Olivier Galibert  <galibert@pobox.com>
 
 	* window.c (Fdelete_window): Dirty the mirror structure _before_
